fix: flash msg z-index

--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -47,4 +47,5 @@ $itemIndex: (
   header: 100,
   modal: 150,
   modal-confirm: 200,
+  flash-msg: 200,
 );
